--- a/src/components/MainLayout/styles.module.css
+++ b/src/components/MainLayout/styles.module.css
@@ -1,3 +1,9 @@
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 .mainLayout {
   font-weight: 400 !important;
   background-color: #fff;
