Give h4s a font-weight of 600

--- a/plugins/gatsby-theme-iterative-docs/src/components/Documentation/Markdown/Main/styles.module.css
+++ b/plugins/gatsby-theme-iterative-docs/src/components/Documentation/Markdown/Main/styles.module.css
@@ -43,6 +43,10 @@
       font-weight: 500;
     }
 
+    h4 {
+      font-weight: 600;
+    }
+
     img + em,
     :global(.gatsby-resp-image-wrapper) + em {
       color: #6a737d;
