--- a/src/components/SubscribeSection/styles.module.css
+++ b/src/components/SubscribeSection/styles.module.css
@@ -5,19 +5,19 @@
   flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
-  min-height: 300px;
   background-color: #13adc7;
-
-  @media (--xs-scr) {
-    min-height: auto;
-  }
 }
 
 .container {
   margin: 0 auto;
-  padding: 20px 15px 30px;
+  padding: 85px 15px 65px;
   width: 100%;
   max-width: 1000px;
+  box-sizing: border-box;
+
+  @media (--xs-scr) {
+    padding: 20px 15px;
+  }
 }
 
 .glyph {
