--- a/src/@dvcorg/gatsby-theme-iterative/components/data/styles.module.css
+++ b/src/@dvcorg/gatsby-theme-iterative/components/data/styles.module.css
@@ -1,17 +1,17 @@
 .cmlIcon {
-  background-image: url('../../../../../static/img/cml_icon-color--square_vector.svg');
+  background-image: url("../../../../../static/img/cml_icon-color--square_vector.svg");
 }
 
 .dvcIcon {
-  background-image: url('../../../../../static/img/dvc_icon-color--square_vector.svg');
+  background-image: url("../../../../../static/img/dvc_icon-color--square_vector.svg");
 }
 
 .studioIcon {
-  background-image: url('../../../../../static/img/studio_icon-color--square_vector.svg');
+  background-image: url("../../../../../static/img/studio_icon-color--square_vector.svg");
 }
 
 .mlemIcon {
-  background-image: url('../../../../../static/img/mlem-icon.svg');
+  background-image: url("../../../../../static/img/mlem-icon.svg");
 }
 
 .other {
