--- a/src/@dvcorg/gatsby-theme-iterative/components/data/styles.module.css
+++ b/src/@dvcorg/gatsby-theme-iterative/components/data/styles.module.css
@@ -14,6 +14,10 @@
   background-image: url("../../../../../static/img/mlem-icon.svg");
 }
 
+.vscodeIcon {
+  background-image: url("../../../../../static/img/vscode-icon.svg");
+}
+
 .other {
   font-weight: 600;
   letter-spacing: 2px;
