--- a/src/components/Community/Section/styles.module.css
+++ b/src/components/Community/Section/styles.module.css
@@ -7,7 +7,7 @@
     padding: 0 50px 260px;
   }
 
-  @media (--md-scr) {
+  @media screen(mdMax) {
     padding: 0 40px;
     margin-left: -15px;
     margin-right: -15px;
@@ -18,7 +18,7 @@
     }
   }
 
-  @media (--sm-scr) {
+  @media screen(smMax) {
     margin: 0;
     padding: 20px 0;
 
@@ -47,13 +47,13 @@
   font-weight: 500;
   line-height: 60px;
 
-  @media (--sm-scr) {
+  @media screen(smMax) {
     font-size: 30px;
     line-height: 35px;
     cursor: pointer;
 
     &::after {
-      content: "";
+      content: '';
       position: relative;
       display: inline-block;
       width: 0;
@@ -83,14 +83,14 @@
   line-height: 24px;
   color: var(--color-gray);
 
-  @media (--sm-scr) {
+  @media screen(smMax) {
     display: none;
   }
 
   &.mobile {
     display: none;
 
-    @media (--sm-scr) {
+    @media screen(smMax) {
       display: block;
     }
   }
@@ -105,7 +105,7 @@
   height: 450px;
   margin-left: -550px;
 
-  @media (--sm-scr) {
+  @media screen(smMax) {
     display: none;
   }
 }
