--- a/src/components/Community/Testimonial/styles.module.css
+++ b/src/components/Community/Testimonial/styles.module.css
@@ -10,15 +10,15 @@
     display: none;
   }
 
-  @media (--md-scr) {
+  @media screen(mdMax) {
     margin: 40px 25px 0;
   }
 
-  @media (--sm-scr) {
+  @media screen(smMax) {
     margin: 40px 50px 0;
   }
 
-  @media (--xs-scr) {
+  @media screen(xsMax) {
     margin: 20px 50px 0;
   }
 
