--- a/src/components/SubscribeSection/Form/styles.module.css
+++ b/src/components/SubscribeSection/Form/styles.module.css
@@ -5,7 +5,7 @@
   background-color: #fff;
   display: flex;
 
-  @media (--xs-scr) {
+  @media screen(xsMax) {
     flex-direction: column;
   }
 }
@@ -24,7 +24,7 @@
     background: var(--color-light-blue);
   }
 
-  @media (--xs-scr) {
+  @media screen(xsMax) {
     border-radius: 4px 4px 0 0;
   }
 }
@@ -44,7 +44,7 @@
     background-color: #daf1f5;
   }
 
-  @media (--xs-scr) {
+  @media screen(xsMax) {
     min-height: 60px;
     width: 100%;
     border-radius: 0 0 4px 4px;
