--- a/src/components/PromoSection/styles.module.css
+++ b/src/components/PromoSection/styles.module.css
@@ -73,7 +73,7 @@
   text-decoration: none;
   text-align: left;
   color: #fff;
-  background: var(--color-purple) url('/img/arrow_right_white.svg') right center
+  background: var(--color-purple) url("/img/arrow_right_white.svg") right center
     no-repeat;
   background-position-x: 147px;
   transition: 0.2s background-color ease-out;
@@ -98,7 +98,7 @@
     border-radius: 4px;
     background-color: #fff;
     box-shadow: 0 2px 4px 0 rgb(0 0 0 / 21%);
-    background-image: url('/img/arrow_right_dark.svg');
+    background-image: url("/img/arrow_right_dark.svg");
     transition: 0.2s background-color ease-out;
 
     &:hover {
@@ -106,7 +106,7 @@
     }
 
     &:focus {
-      background: var(--color-orange) url('/img/arrow_right_white.svg') right
+      background: var(--color-orange) url("/img/arrow_right_white.svg") right
         center no-repeat;
       background-position-x: 147px;
       box-shadow: 0 2px 4px 0 rgb(0 0 0 / 21%);
