--- a/src/@dvcorg/gatsby-theme-iterative/components/LayoutHeader/Nav/styles.module.css
+++ b/src/@dvcorg/gatsby-theme-iterative/components/LayoutHeader/Nav/styles.module.css
@@ -8,7 +8,7 @@
     list-style-type: none;
   }
 
-  @media (--xs-scr) {
+  @media screen(xsMax) {
     display: none;
   }
 }
@@ -47,7 +47,7 @@
     opacity: 1;
   }
 
-  @media (--md-scr) {
+  @media screen(mdMax) {
     padding: 12px 24px;
     font-size: 14px;
   }
