Replace mixins with tailwind utilities

--- a/src/@dvcorg/gatsby-theme-iterative/components/LayoutHeader/Nav/LinkItems/styles.module.css
+++ b/src/@dvcorg/gatsby-theme-iterative/components/LayoutHeader/Nav/LinkItems/styles.module.css
@@ -46,9 +46,7 @@
 }
 
 .link {
-  @mixin active;
-  @mixin hover;
-  @mixin focus;
+  @apply hover active focus;
 
   font-family: var(--font-base);
   font-weight: 400;
