--- a/src/components/NotFound/styles.module.css
+++ b/src/components/NotFound/styles.module.css
@@ -1,30 +1,11 @@
 .wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 100px auto;
+  @apply flex flex-col grow justify-center items-center mx-auto my-24;
 }
 
 .title {
-  @media screen(mdMax) {
-    @mixin h1-mobile;
-  }
-
-  @media screen(lg) {
-    @mixin h1-desktop;
-  }
+  @apply font-medium text-3xl lg:text-4xl mb-4;
 }
 
 .content {
-  @media screen(mdMax) {
-    @mixin text-mobile;
-
-    padding: 0 15px;
-    text-align: center;
-  }
-
-  @media screen(lg) {
-    @mixin text-desktop;
-  }
+  @apply text-center text-xl lg:text-2xl;
 }
