Upgrade to theme v0.2 line (#4118)
* fix(deps): update iterative packages

* WIP refactor around new theme version

* Revert dev middleware removal

* Revert link check updates

* Fix lint issues

* Use alert content from theme

* Upgrade gatsby-theme-iterative

* yarn lint-css --fix

* Fix remaining screen sizes and unwrapped pages

* Re-add shadowed hamburger menu

* Use anchor links over JS scrolling in home, and fix scroll padding/margin

* Replace mixins with tailwind utilities

* update theme

* Add styles to community image links ensuring consistent size

* Apply shrink-0/grow-0 to all community line images

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Thomas Kunwar <yathomasi@gmail.com>

--- a/src/@dvcorg/gatsby-theme-iterative/components/LayoutHeader/Nav/SocialIcons/styles.module.css
+++ b/src/@dvcorg/gatsby-theme-iterative/components/LayoutHeader/Nav/SocialIcons/styles.module.css
@@ -4,20 +4,21 @@
   padding: 0;
   margin: 0 16px 0 4px;
 
-  @media (--xl-scr) {
+  @media screen(xl) {
     margin: 0 24px 0 12px;
   }
 
-  @media (--md-scr) {
+  @media screen(mdMax) {
     margin: 0 16px 0 0;
   }
 
-  @media (--sm-scr) {
+  @media screen(smMax) {
     margin: 0 16px 0 4px;
   }
 }
 
 .socialIcon {
+  box-sizing: content-box;
   display: block;
   width: 24px;
   height: 24px;
@@ -25,7 +26,7 @@
   padding: 12px;
   margin: 0;
 
-  @media (--md-scr) {
+  @media screen(mdMax) {
     width: 20px;
     height: 20px;
     padding: 6px;
