--- a/src/@dvcorg/gatsby-theme-iterative/components/MainLayout/fonts.css
+++ b/src/@dvcorg/gatsby-theme-iterative/components/MainLayout/fonts.css
@@ -3,10 +3,14 @@
   text-size-adjust: none;
 }
 
+:root {
+  --font-base: brandongrotesque, tahoma, arial, sans-serif;
+}
+
 @font-face {
   font-family: BrandonGrotesque;
-  src: url("./brandon_light.woff2") format("woff2"),
-    url("./brandon_light.woff") format("woff");
+  src: url("./fonts/brandon_light.woff2") format("woff2"),
+    url("./fonts/brandon_light.woff") format("woff");
   font-style: normal;
   font-weight: 300;
   font-display: swap;
@@ -14,8 +18,8 @@
 
 @font-face {
   font-family: BrandonGrotesque;
-  src: url("./brandon_light_it.woff2") format("woff2"),
-    url("./brandon_light_it.woff") format("woff");
+  src: url("./fonts/brandon_light_it.woff2") format("woff2"),
+    url("./fonts/brandon_light_it.woff") format("woff");
   font-style: italic;
   font-weight: 300;
   font-display: swap;
@@ -23,8 +27,8 @@
 
 @font-face {
   font-family: BrandonGrotesque;
-  src: url("./brandon_reg.woff2") format("woff2"),
-    url("./brandon_reg.woff") format("woff");
+  src: url("./fonts/brandon_reg.woff2") format("woff2"),
+    url("./fonts/brandon_reg.woff") format("woff");
   font-style: normal;
   font-weight: 400;
   font-display: swap;
@@ -32,8 +36,8 @@
 
 @font-face {
   font-family: BrandonGrotesque;
-  src: url("./brandon_reg_it.woff2") format("woff2"),
-    url("./brandon_reg_it.woff") format("woff");
+  src: url("./fonts/brandon_reg_it.woff2") format("woff2"),
+    url("./fonts/brandon_reg_it.woff") format("woff");
   font-style: italic;
   font-weight: 400;
   font-display: swap;
@@ -41,8 +45,8 @@
 
 @font-face {
   font-family: BrandonGrotesque;
-  src: url("./brandon_med.woff2") format("woff2"),
-    url("./brandon_med.woff") format("woff");
+  src: url("./fonts/brandon_med.woff2") format("woff2"),
+    url("./fonts/brandon_med.woff") format("woff");
   font-style: normal;
   font-weight: 500;
   font-display: swap;
@@ -50,8 +54,8 @@
 
 @font-face {
   font-family: BrandonGrotesque;
-  src: url("./brandon_med_it.woff2") format("woff2"),
-    url("./brandon_med_it.woff") format("woff");
+  src: url("./fonts/brandon_med_it.woff2") format("woff2"),
+    url("./fonts/brandon_med_it.woff") format("woff");
   font-style: italic;
   font-weight: 500;
   font-display: swap;
@@ -59,8 +63,8 @@
 
 @font-face {
   font-family: BrandonGrotesque;
-  src: url("./brandon_bld.woff2") format("woff2"),
-    url("./brandon_bld.woff") format("woff");
+  src: url("./fonts/brandon_bld.woff2") format("woff2"),
+    url("./fonts/brandon_bld.woff") format("woff");
   font-style: normal;
   font-weight: 700;
   font-display: swap;
