--- a/src/components/PromoSection/styles.module.css
+++ b/src/components/PromoSection/styles.module.css
@@ -1,4 +1,5 @@
 .container {
+  width: 100%;
   position: relative;
   display: flex;
   justify-content: center;
@@ -24,11 +25,11 @@
     right: 30px;
   }
 
-  @media (--sm-scr) {
+  @media screen(smMax) {
     width: 110px;
   }
 
-  @media (--xs-scr) {
+  @media screen(xsMax) {
     display: none;
   }
 }
@@ -51,7 +52,7 @@
   align-items: center;
   margin: 20px auto 0;
 
-  @media (--xs-scr) {
+  @media screen(xsMax) {
     flex-direction: column;
   }
 }
@@ -87,7 +88,7 @@
   & + & {
     margin-left: 14px;
 
-    @media (--xs-scr) {
+    @media screen(xsMax) {
       margin-left: 0;
     }
   }
@@ -113,7 +114,7 @@
     }
   }
 
-  @media (--xs-scr) {
+  @media screen(xsMax) {
     margin-bottom: 12px;
     margin-right: 0 !important;
   }
