--- a/src/components/Home/LearnMore/styles.module.css
+++ b/src/components/Home/LearnMore/styles.module.css
@@ -35,15 +35,12 @@
 }
 
 .button {
-  position: absolute;
+  @apply p-2;
+
   z-index: 2;
-  transform: translate(-50%, 0%);
-  left: 50%;
-  bottom: 16px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0;
   border: none;
   background: none;
   cursor: pointer;
