--- a/src/@dvcorg/gatsby-theme-iterative/components/MainLayout/fonts.css
+++ b/src/@dvcorg/gatsby-theme-iterative/components/MainLayout/fonts.css
@@ -9,8 +9,8 @@
 
 @font-face {
   font-family: BrandonGrotesque;
-  src: url("./fonts/brandon_light.woff2") format("woff2"),
-    url("./fonts/brandon_light.woff") format("woff");
+  src: url('./fonts/brandon_light.woff2') format('woff2'),
+    url('./fonts/brandon_light.woff') format('woff');
   font-style: normal;
   font-weight: 300;
   font-display: swap;
@@ -18,8 +18,8 @@
 
 @font-face {
   font-family: BrandonGrotesque;
-  src: url("./fonts/brandon_light_it.woff2") format("woff2"),
-    url("./fonts/brandon_light_it.woff") format("woff");
+  src: url('./fonts/brandon_light_it.woff2') format('woff2'),
+    url('./fonts/brandon_light_it.woff') format('woff');
   font-style: italic;
   font-weight: 300;
   font-display: swap;
@@ -27,8 +27,8 @@
 
 @font-face {
   font-family: BrandonGrotesque;
-  src: url("./fonts/brandon_reg.woff2") format("woff2"),
-    url("./fonts/brandon_reg.woff") format("woff");
+  src: url('./fonts/brandon_reg.woff2') format('woff2'),
+    url('./fonts/brandon_reg.woff') format('woff');
   font-style: normal;
   font-weight: 400;
   font-display: swap;
@@ -36,8 +36,8 @@
 
 @font-face {
   font-family: BrandonGrotesque;
-  src: url("./fonts/brandon_reg_it.woff2") format("woff2"),
-    url("./fonts/brandon_reg_it.woff") format("woff");
+  src: url('./fonts/brandon_reg_it.woff2') format('woff2'),
+    url('./fonts/brandon_reg_it.woff') format('woff');
   font-style: italic;
   font-weight: 400;
   font-display: swap;
@@ -45,8 +45,8 @@
 
 @font-face {
   font-family: BrandonGrotesque;
-  src: url("./fonts/brandon_med.woff2") format("woff2"),
-    url("./fonts/brandon_med.woff") format("woff");
+  src: url('./fonts/brandon_med.woff2') format('woff2'),
+    url('./fonts/brandon_med.woff') format('woff');
   font-style: normal;
   font-weight: 500;
   font-display: swap;
@@ -54,8 +54,8 @@
 
 @font-face {
   font-family: BrandonGrotesque;
-  src: url("./fonts/brandon_med_it.woff2") format("woff2"),
-    url("./fonts/brandon_med_it.woff") format("woff");
+  src: url('./fonts/brandon_med_it.woff2') format('woff2'),
+    url('./fonts/brandon_med_it.woff') format('woff');
   font-style: italic;
   font-weight: 500;
   font-display: swap;
@@ -63,8 +63,8 @@
 
 @font-face {
   font-family: BrandonGrotesque;
-  src: url("./fonts/brandon_bld.woff2") format("woff2"),
-    url("./fonts/brandon_bld.woff") format("woff");
+  src: url('./fonts/brandon_bld.woff2') format('woff2'),
+    url('./fonts/brandon_bld.woff') format('woff');
   font-style: normal;
   font-weight: 700;
   font-display: swap;
