--- a/src/components/Home/WhatsNewModal/styles.module.css
+++ b/src/components/Home/WhatsNewModal/styles.module.css
@@ -65,7 +65,7 @@
     opacity: 0;
     border-radius: 99px;
     transition: opacity 0.2s ease-out;
-    background: var(--color-azure-hover);
+    background: var(--color-purple-hover);
   }
 
   &:hover {
