--- a/src/components/Home/UseCases/Video/styles.module.css
+++ b/src/components/Home/UseCases/Video/styles.module.css
@@ -10,7 +10,7 @@
   padding-bottom: 56.25%;
   background-color: rgb(23 23 23 / 59%);
 
-  @media (max-width: 768px) {
+  @media (width <= 768px) {
     width: 100%;
   }
 
@@ -33,10 +33,7 @@
 .overlay {
   position: absolute;
   z-index: 1;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  inset: 0;
   display: flex;
   align-items: center;
   justify-content: center;
