--- a/src/components/Home/LandingHero/styles.module.css
+++ b/src/components/Home/LandingHero/styles.module.css
@@ -27,7 +27,7 @@
     flex-direction: column;
   }
 
-  @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  @media only screen and (device-width >= 768px) and (device-width <= 1024px) {
     justify-content: flex-start;
   }
 }
@@ -88,7 +88,7 @@
     padding-top: 24px;
   }
 
-  @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  @media only screen and (device-width >= 768px) and (device-width <= 1024px) {
     align-items: center;
     padding-top: 24px;
   }
@@ -149,7 +149,7 @@
     font-size: 18px;
   }
 
-  @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  @media only screen and (device-width >= 768px) and (device-width <= 1024px) {
     align-items: center;
     margin-top: 24px;
     font-size: 18px;
