--- a/src/components/Home/WhatsNewModal/styles.module.css
+++ b/src/components/Home/WhatsNewModal/styles.module.css
@@ -57,10 +57,7 @@
   &::before {
     position: absolute;
     content: '';
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    inset: 0;
     z-index: -1;
     opacity: 0;
     border-radius: 99px;
