--- a/src/@dvcorg/gatsby-theme-iterative/components/MainLayout/fonts.css
+++ b/src/@dvcorg/gatsby-theme-iterative/components/MainLayout/fonts.css
@@ -9,7 +9,8 @@
 
 @font-face {
   font-family: BrandonGrotesque;
-  src: url('./fonts/brandon_light.woff2') format('woff2'),
+  src:
+    url('./fonts/brandon_light.woff2') format('woff2'),
     url('./fonts/brandon_light.woff') format('woff');
   font-style: normal;
   font-weight: 300;
@@ -18,7 +19,8 @@
 
 @font-face {
   font-family: BrandonGrotesque;
-  src: url('./fonts/brandon_light_it.woff2') format('woff2'),
+  src:
+    url('./fonts/brandon_light_it.woff2') format('woff2'),
     url('./fonts/brandon_light_it.woff') format('woff');
   font-style: italic;
   font-weight: 300;
@@ -27,7 +29,8 @@
 
 @font-face {
   font-family: BrandonGrotesque;
-  src: url('./fonts/brandon_reg.woff2') format('woff2'),
+  src:
+    url('./fonts/brandon_reg.woff2') format('woff2'),
     url('./fonts/brandon_reg.woff') format('woff');
   font-style: normal;
   font-weight: 400;
@@ -36,7 +39,8 @@
 
 @font-face {
   font-family: BrandonGrotesque;
-  src: url('./fonts/brandon_reg_it.woff2') format('woff2'),
+  src:
+    url('./fonts/brandon_reg_it.woff2') format('woff2'),
     url('./fonts/brandon_reg_it.woff') format('woff');
   font-style: italic;
   font-weight: 400;
@@ -45,7 +49,8 @@
 
 @font-face {
   font-family: BrandonGrotesque;
-  src: url('./fonts/brandon_med.woff2') format('woff2'),
+  src:
+    url('./fonts/brandon_med.woff2') format('woff2'),
     url('./fonts/brandon_med.woff') format('woff');
   font-style: normal;
   font-weight: 500;
@@ -54,7 +59,8 @@
 
 @font-face {
   font-family: BrandonGrotesque;
-  src: url('./fonts/brandon_med_it.woff2') format('woff2'),
+  src:
+    url('./fonts/brandon_med_it.woff2') format('woff2'),
     url('./fonts/brandon_med_it.woff') format('woff');
   font-style: italic;
   font-weight: 500;
@@ -63,7 +69,8 @@
 
 @font-face {
   font-family: BrandonGrotesque;
-  src: url('./fonts/brandon_bld.woff2') format('woff2'),
+  src:
+    url('./fonts/brandon_bld.woff2') format('woff2'),
     url('./fonts/brandon_bld.woff') format('woff');
   font-style: normal;
   font-weight: 700;
