--- a/src/components/DownloadButton/styles.module.css
+++ b/src/components/DownloadButton/styles.module.css
@@ -38,7 +38,9 @@
   flex-direction: column;
   background-color: #fff;
   box-shadow: 0 2px 3px 0 rgb(0 0 0 / 15%);
-  transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
+  transition:
+    opacity 0.2s ease-in-out,
+    visibility 0.2s ease-in-out;
 
   &.open {
     visibility: visible;
