Fix home page CSS bugs

--- a/src/components/Home/WhatsNewModal/styles.module.css
+++ b/src/components/Home/WhatsNewModal/styles.module.css
@@ -31,7 +31,7 @@
   background: linear-gradient(
     102.58deg,
     #945dd6 22.89%,
-    #17d5f5 24.16%,
+    #d085ff 24.16%,
     #945dd6 25.62%
   );
   background-size: 600% auto;
