--- a/src/components/Home/LogosSlider/styles.module.css
+++ b/src/components/Home/LogosSlider/styles.module.css
@@ -14,7 +14,7 @@
     z-index: 1;
     width: 50px;
     height: 100%;
-    background: linear-gradient(to left, var(--color-light-blue), transparent);
+    background: linear-gradient(to left, #ecdeff, transparent);
 
     @media screen(sm) {
       width: 100px;
@@ -29,7 +29,7 @@
     z-index: 1;
     width: 50px;
     height: 100%;
-    background: linear-gradient(to right, var(--color-light-blue), transparent);
+    background: linear-gradient(to right, #ecdeff, transparent);
 
     @media screen(sm) {
       width: 100px;
